--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "dependencies": {
     "autoprefixer": "^9.6.1",
     "babel-plugin-styled-components": "^1.10.6",
+    "dotenv": "^8.1.0",
     "gatsby": "^2.13.67",
+    "gatsby-background-image": "^0.8.5",
     "gatsby-image": "^2.2.8",
     "gatsby-plugin-manifest": "^2.2.5",
     "gatsby-plugin-offline": "^2.2.6",
@@ -23,7 +25,8 @@
     "react-helmet": "^5.2.1",
     "react-icons": "^3.7.0",
     "styled-components": "^4.3.2",
-    "tailwindcss": "^1.1.2"
+    "tailwindcss": "^1.1.2",
+    "tailwindcss-grid": "^1.2.1"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
